--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Proposal of my love to you</title>
     <link rel="stylesheet" href="style.css">
     <head>
-    <body>
+    <body style="background-color:black;">
         <section class="header">
             <div class="text">
                 <h1 style="color: red">I Love U!</h1>
